// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicTextEntry Chromium Rich text Basic Copy + paste 1`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span></p>"`;

exports[`BasicTextEntry Chromium Rich text Basic Copy + paste 2`] = `
Object {
  "anchorOffset": 12,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
  "focusOffset": 12,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Chromium Rich text Basic Copy + paste 3`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span></p>"`;

exports[`BasicTextEntry Chromium Rich text Basic Copy + paste 4`] = `
Object {
  "anchorOffset": 0,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 12,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Chromium Rich text Basic Copy + paste 5`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span></p>"`;

exports[`BasicTextEntry Chromium Rich text Basic Copy + paste 6`] = `
Object {
  "anchorOffset": 0,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 12,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Chromium Rich text Basic Copy + paste 7`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span></p>"`;

exports[`BasicTextEntry Chromium Rich text Basic Copy + paste 8`] = `
Object {
  "anchorOffset": 12,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
  "focusOffset": 12,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Chromium Rich text Copy + paste operations 1`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span></p>"`;

exports[`BasicTextEntry Chromium Rich text Copy + paste operations 2`] = `
Object {
  "anchorOffset": 12,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
  "focusOffset": 12,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Chromium Rich text Copy + paste operations 3`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span></p>"`;

exports[`BasicTextEntry Chromium Rich text Copy + paste operations 4`] = `
Object {
  "anchorOffset": 0,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
  "focusOffset": 0,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Chromium Rich text Copy + paste operations 5`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span></p>"`;

exports[`BasicTextEntry Chromium Rich text Copy + paste operations 6`] = `
Object {
  "anchorOffset": 0,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 12,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Chromium Rich text Copy + paste operations 7`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span></p>"`;

exports[`BasicTextEntry Chromium Rich text Copy + paste operations 8`] = `
Object {
  "anchorOffset": 12,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
  "focusOffset": 12,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Chromium Rich text Empty paragraph and new line node selection 1`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p>"`;

exports[`BasicTextEntry Chromium Rich text Empty paragraph and new line node selection 2`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    1,
    0,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    1,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Chromium Rich text Empty paragraph and new line node selection 3`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p>"`;

exports[`BasicTextEntry Chromium Rich text Empty paragraph and new line node selection 4`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Chromium Rich text Empty paragraph and new line node selection 5`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span></p><div contenteditable=\\"false\\" class=\\"editor-placeholder\\">Enter some rich text...</div>"`;

exports[`BasicTextEntry Chromium Rich text Empty paragraph and new line node selection 6`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Chromium Rich text Empty paragraph and new line node selection 7`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span><br><span>﻿</span></p>"`;

exports[`BasicTextEntry Chromium Rich text Empty paragraph and new line node selection 8`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    2,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    2,
    0,
  ],
}
`;

exports[`BasicTextEntry Chromium Rich text Empty paragraph and new line node selection 9`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span><br><span>﻿</span></p>"`;

exports[`BasicTextEntry Chromium Rich text Empty paragraph and new line node selection 10`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Chromium Rich text Empty paragraph and new line node selection 11`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span></p><div contenteditable=\\"false\\" class=\\"editor-placeholder\\">Enter some rich text...</div>"`;

exports[`BasicTextEntry Chromium Rich text Empty paragraph and new line node selection 12`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Chromium Rich text Simple text entry and selection 1`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Hello World.</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>This is another paragraph. </span><span contenteditable=\\"false\\" style=\\"color: transparent; background-size: 16px 16px; height: 16px; width: 16px; background-position: center center; background-repeat: no-repeat; display: inline-block; margin: 0px 1px; text-align: center; vertical-align: middle; background-image: url(&quot;https://static.xx.fbcdn.net/images/emoji.php/v9/t4c/1/16/1f642.png&quot;);\\">🙂</span><span>﻿</span></p>"`;

exports[`BasicTextEntry Chromium Rich text Simple text entry and selection 2`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    1,
    2,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    1,
    2,
    0,
  ],
}
`;

exports[`BasicTextEntry Firefox Rich text Basic Copy + paste 1`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span></p>"`;

exports[`BasicTextEntry Firefox Rich text Basic Copy + paste 2`] = `
Object {
  "anchorOffset": 12,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
  "focusOffset": 12,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Firefox Rich text Basic Copy + paste 3`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span></p>"`;

exports[`BasicTextEntry Firefox Rich text Basic Copy + paste 4`] = `
Object {
  "anchorOffset": 0,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
  ],
  "focusOffset": 3,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
  ],
}
`;

exports[`BasicTextEntry Firefox Rich text Basic Copy + paste 5`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span></p>"`;

exports[`BasicTextEntry Firefox Rich text Basic Copy + paste 6`] = `
Object {
  "anchorOffset": 0,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
  ],
  "focusOffset": 3,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
  ],
}
`;

exports[`BasicTextEntry Firefox Rich text Basic Copy + paste 7`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>﻿</span><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span><span>﻿</span></p>"`;

exports[`BasicTextEntry Firefox Rich text Basic Copy + paste 8`] = `
Object {
  "anchorOffset": 12,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
  "focusOffset": 12,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Firefox Rich text Empty paragraph and new line node selection 1`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p>"`;

exports[`BasicTextEntry Firefox Rich text Empty paragraph and new line node selection 2`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    1,
    0,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    1,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Firefox Rich text Empty paragraph and new line node selection 3`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p>"`;

exports[`BasicTextEntry Firefox Rich text Empty paragraph and new line node selection 4`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Firefox Rich text Empty paragraph and new line node selection 5`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span></p><div class=\\"editor-placeholder\\" contenteditable=\\"false\\">Enter some rich text...</div>"`;

exports[`BasicTextEntry Firefox Rich text Empty paragraph and new line node selection 6`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Firefox Rich text Empty paragraph and new line node selection 7`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span><br><span>﻿</span></p>"`;

exports[`BasicTextEntry Firefox Rich text Empty paragraph and new line node selection 8`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    2,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    2,
    0,
  ],
}
`;

exports[`BasicTextEntry Firefox Rich text Empty paragraph and new line node selection 9`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span><br><span>﻿</span></p>"`;

exports[`BasicTextEntry Firefox Rich text Empty paragraph and new line node selection 10`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Firefox Rich text Empty paragraph and new line node selection 11`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span></p><div class=\\"editor-placeholder\\" contenteditable=\\"false\\">Enter some rich text...</div>"`;

exports[`BasicTextEntry Firefox Rich text Empty paragraph and new line node selection 12`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Firefox Rich text Simple text entry and selection 1`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Hello World.</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>This is another paragraph. </span><span style=\\"color: transparent; background-size: 16px 16px; height: 16px; width: 16px; background-position: center center; background-repeat: no-repeat; display: inline-block; margin: 0px 1px; text-align: center; vertical-align: middle; background-image: url(&quot;https://static.xx.fbcdn.net/images/emoji.php/v9/t4c/1/16/1f642.png&quot;);\\" contenteditable=\\"false\\">🙂</span><span>﻿</span></p>"`;

exports[`BasicTextEntry Firefox Rich text Simple text entry and selection 2`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    1,
    2,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    1,
    2,
    0,
  ],
}
`;

exports[`BasicTextEntry Webkit Rich text Basic Copy + paste 1`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span></p>"`;

exports[`BasicTextEntry Webkit Rich text Basic Copy + paste 2`] = `
Object {
  "anchorOffset": 12,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
  "focusOffset": 12,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Webkit Rich text Basic Copy + paste 3`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span></p>"`;

exports[`BasicTextEntry Webkit Rich text Basic Copy + paste 4`] = `
Object {
  "anchorOffset": 0,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 12,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Webkit Rich text Basic Copy + paste 5`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span></p>"`;

exports[`BasicTextEntry Webkit Rich text Basic Copy + paste 6`] = `
Object {
  "anchorOffset": 0,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 12,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Webkit Rich text Basic Copy + paste 7`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Copy + pasting?</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Sounds good!</span></p>"`;

exports[`BasicTextEntry Webkit Rich text Basic Copy + paste 8`] = `
Object {
  "anchorOffset": 12,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
  "focusOffset": 12,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    2,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Webkit Rich text Empty paragraph and new line node selection 1`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p>"`;

exports[`BasicTextEntry Webkit Rich text Empty paragraph and new line node selection 2`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    1,
    0,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    1,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Webkit Rich text Empty paragraph and new line node selection 3`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span></p><p class=\\"editor-paragraph\\"><span>﻿</span></p>"`;

exports[`BasicTextEntry Webkit Rich text Empty paragraph and new line node selection 4`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Webkit Rich text Empty paragraph and new line node selection 5`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span></p><div contenteditable=\\"false\\" class=\\"editor-placeholder\\">Enter some rich text...</div>"`;

exports[`BasicTextEntry Webkit Rich text Empty paragraph and new line node selection 6`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Webkit Rich text Empty paragraph and new line node selection 7`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span><br><span>﻿</span></p>"`;

exports[`BasicTextEntry Webkit Rich text Empty paragraph and new line node selection 8`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    2,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    2,
    0,
  ],
}
`;

exports[`BasicTextEntry Webkit Rich text Empty paragraph and new line node selection 9`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span><br><span>﻿</span></p>"`;

exports[`BasicTextEntry Webkit Rich text Empty paragraph and new line node selection 10`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Webkit Rich text Empty paragraph and new line node selection 11`] = `"<p class=\\"editor-paragraph\\"><span>﻿</span></p><div contenteditable=\\"false\\" class=\\"editor-placeholder\\">Enter some rich text...</div>"`;

exports[`BasicTextEntry Webkit Rich text Empty paragraph and new line node selection 12`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    0,
    0,
    0,
  ],
}
`;

exports[`BasicTextEntry Webkit Rich text Simple text entry and selection 1`] = `"<p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>Hello World.</span></p><p class=\\"editor-paragraph\\" dir=\\"ltr\\"><span>This is another paragraph. </span><span contenteditable=\\"false\\" style=\\"color: transparent; background-size: 16px 16px; height: 16px; width: 16px; display: inline-block; margin: 0px 1px; text-align: center; vertical-align: middle; background-image: url(&quot;https://static.xx.fbcdn.net/images/emoji.php/v9/t4c/1/16/1f642.png&quot;); background-position: center center; background-repeat: no-repeat no-repeat;\\">🙂</span><span>﻿</span></p>"`;

exports[`BasicTextEntry Webkit Rich text Simple text entry and selection 2`] = `
Object {
  "anchorOffset": 1,
  "anchorPath": Array [
    1,
    2,
    3,
    1,
    0,
    1,
    2,
    0,
  ],
  "focusOffset": 1,
  "focusPath": Array [
    1,
    2,
    3,
    1,
    0,
    1,
    2,
    0,
  ],
}
`;
